# cabin-ai

./: .env.example  .gitignore  MANIFEST.in  Makefile  README.md  audio_core.py  config.py  debug_deepgram.py  debug_deepgram_client.py  debug_deepgram_sig.py  debug_google_models.py  main.py  pyproject.toml  services.py
docs/: HUONG_DAN_API.md
src/cabin_app/: audio_core.py  config.py  glossary.json  hallucinations.py  main.py  model_manager.py  prompts.py  services.py
src/cabin_app/services/: __init__.py  base.py
src/cabin_app/services/stt/: __init__.py  deepgram.py  google.py  groq.py  mock.py
src/cabin_app/services/translation/: __init__.py  google.py  groq.py  llm.py  mock.py  openai.py
src/cabin_app/static/css/: style.css
src/cabin_app/static/js/: main.js
src/cabin_app/templates/: index.html
templates/: index.html
