[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cabin-ai"
version = "0.1.0"
description = "Real-time AI Cabin Translator Assistant"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
    "pyaudio>=0.2.14",
    "pydantic-settings>=2.0.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
# Lệnh 'cabin-run' sẽ tự động chạy hàm start trong src/cabin_app/main.py
cabin-run = "cabin_app.main:start"

[tool.setuptools.packages.find]
where = ["src"]